[gd_scene load_steps=11 format=3 uid="uid://buc2wf64kxubv"]

[ext_resource type="Script" uid="uid://bkfiqbmdt62ob" path="res://menus/LevelFinishUI/level_finish_ui.gd" id="1_6msl1"]
[ext_resource type="Texture2D" uid="uid://docsqmyggaaq1" path="res://assets/level complete.webp" id="2_6msl1"]
[ext_resource type="Script" uid="uid://swuf1fi60t56" path="res://menus/LevelFinishUI/score_background.gd" id="3_4lj4l"]
[ext_resource type="Texture2D" uid="uid://d6r4dw0crej8" path="res://assets/house.png" id="4_nb1nv"]
[ext_resource type="Texture2D" uid="uid://biscg3y7631g2" path="res://assets/househighlight.png" id="5_otqiw"]
[ext_resource type="Texture2D" uid="uid://dnmiunuvrag87" path="res://assets/arrow.png" id="7_ov87u"]
[ext_resource type="Texture2D" uid="uid://cvvii5n1w08qn" path="res://assets/arrowhighlight.png" id="8_up3dh"]
[ext_resource type="Theme" path="res://theme.tres" id="9_4h4mq"]
[ext_resource type="Script" uid="uid://dfy2vp503gxab" path="res://menus/LevelFinishUI/level_completed.gd" id="10_g2u2k"]
[ext_resource type="Script" uid="uid://c66d1jsi8mpms" path="res://menus/LevelFinishUI/score.gd" id="11_juj26"]

[node name="LevelFinishUI" type="CanvasLayer"]
layer = 2
follow_viewport_enabled = true
script = ExtResource("1_6msl1")

[node name="ScoreBackground" type="TextureRect" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -1256.0
offset_top = 12.0
offset_right = -662.0
offset_bottom = 384.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_6msl1")
script = ExtResource("3_4lj4l")

[node name="ReturnToMenu" type="TextureButton" parent="ScoreBackground"]
layout_mode = 0
offset_left = 106.0
offset_top = 209.0
offset_right = 306.0
offset_bottom = 409.0
scale = Vector2(0.64, 0.64)
texture_normal = ExtResource("4_nb1nv")
texture_pressed = ExtResource("5_otqiw")
texture_hover = ExtResource("5_otqiw")
metadata/_edit_group_ = true

[node name="Continue" type="TextureButton" parent="ScoreBackground"]
layout_mode = 0
offset_left = 351.0
offset_top = 208.0
offset_right = 551.0
offset_bottom = 408.0
scale = Vector2(0.64, 0.64)
texture_normal = ExtResource("7_ov87u")
texture_pressed = ExtResource("8_up3dh")
texture_hover = ExtResource("8_up3dh")
metadata/_edit_group_ = true

[node name="LevelCompleted" type="RichTextLabel" parent="ScoreBackground"]
layout_mode = 0
offset_left = 21.0
offset_top = 31.0
offset_right = 581.0
offset_bottom = 159.0
theme = ExtResource("9_4h4mq")
theme_override_colors/default_color = Color(0.045312412, 0.04531242, 0.04531242, 1)
theme_override_font_sizes/normal_font_size = 96
text = "Level Complete"
horizontal_alignment = 1
script = ExtResource("10_g2u2k")
metadata/_edit_group_ = true

[node name="Score" type="RichTextLabel" parent="ScoreBackground"]
layout_mode = 0
offset_left = 201.0
offset_top = 143.0
offset_right = 395.0
offset_bottom = 207.0
theme_override_colors/default_color = Color(0.047058824, 0.047058824, 0.047058824, 1)
theme_override_font_sizes/normal_font_size = 32
horizontal_alignment = 1
script = ExtResource("11_juj26")
metadata/_edit_group_ = true

[connection signal="level_one_complete" from="." to="ScoreBackground" method="_on_level_finish_ui_level_one_complete"]
[connection signal="level_one_complete" from="." to="ScoreBackground/LevelCompleted" method="_on_level_finish_ui_level_one_complete"]
[connection signal="level_one_complete" from="." to="ScoreBackground/Score" method="_on_level_finish_ui_level_one_complete"]
[connection signal="button_down" from="ScoreBackground/ReturnToMenu" to="." method="_on_return_to_menu_button_down"]
[connection signal="button_down" from="ScoreBackground/Continue" to="." method="_on_continue_button_down"]
